Refactor: CategoryService에 소프트 삭제 적용 및 검증 로직 강화
- 카테고리 조회 시 deleted=false 조건 추가하여 유효한 데이터만 반환
- 카테고리 삭제 로직을 softDeleteByStoreIdAndName 기반으로 변경
- 삭제 전 해당 카테고리에 속한 메뉴 존재 여부 검사하여 데이터 무결성 보장