@@ -1,9 +1,10 @@
 package com.beyond.jellyorder.domain.category.service;
 
 import com.beyond.jellyorder.common.auth.StoreJwtClaimUtil;
+import com.beyond.jellyorder.common.exception.DuplicateResourceException;
+import com.beyond.jellyorder.domain.category.domain.Category;
 import com.beyond.jellyorder.domain.category.dto.*;
 import com.beyond.jellyorder.domain.category.repository.CategoryRepository;
-import com.beyond.jellyorder.domain.category.domain.Category;
 import com.beyond.jellyorder.domain.menu.repository.MenuRepository;
 import com.beyond.jellyorder.domain.store.entity.Store;
 import com.beyond.jellyorder.domain.store.repository.StoreRepository;
@@ -11,16 +12,10 @@ import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import com.beyond.jellyorder.common.exception.DuplicateResourceException;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
-/**
- * 카테고리 관련 비즈니스 로직을 담당하는 서비스 클래스.
- * 카테고리 생성 요청을 처리하며, 동일 storeId 내 중복된 카테고리명 존재 여부를 검증한다.
- */
 @Service
 @Transactional
 @RequiredArgsConstructor
@@ -30,60 +25,77 @@ public class CategoryService {
     private final StoreRepository storeRepository;
     private final StoreJwtClaimUtil storeJwtClaimUtil;
 
-    /**
-     * 새로운 카테고리를 생성한다.
-     * 동일 storeId 내에서 name이 중복될 경우 예외를 발생시킨다.
-     *
-     * @param reqDto 클라이언트로부터 전달받은 카테고리 생성 요청 DTO
-     * @return 생성된 카테고리 정보를 담은 응답 DTO
-     * @throws DuplicateResourceException 동일한 이름의 카테고리가 이미 존재하는 경우 발생
-     */
-
     public CategoryCreateResDto create(CategoryCreateReqDto reqDto) {
-        final String storeId = storeJwtClaimUtil.getStoreId();
-        Store store = storeRepository.findById(UUID.fromString(storeId)).orElseThrow(() -> new EntityNotFoundException("유효하지 않은 storeId: " + storeId));
+        final UUID storeId = UUID.fromString(storeJwtClaimUtil.getStoreId());
+        Store store = storeRepository.findById(storeId)
+                .orElseThrow(() -> new EntityNotFoundException("유효하지 않은 storeId: " + storeId));
 
-        if (categoryRepository.existsByStoreIdAndName(UUID.fromString(storeId), reqDto.getName())) {
-            throw new DuplicateResourceException("이미 존재하는 카테고리입니다: " + reqDto.getName());
+        final String name = reqDto.getName();
+        final String description = reqDto.getDescription();
+
+        // 1) 살아있는 동일 이름 존재 → 중복
+        if (categoryRepository.existsByStoreIdAndNameAndDeletedFalse(storeId, name)) {
+            throw new DuplicateResourceException("이미 존재하는 카테고리입니다: " + name);
         }
 
+        // 2) 삭제본이 있으면 가장 최근 1건만 복구
+        var lastDeletedOpt = categoryRepository
+                .findTopByStoreIdAndNameAndDeletedTrueOrderByDeletedAtDesc(storeId, name);
+
+        if (lastDeletedOpt.isPresent()) {
+            Category deletedOne = lastDeletedOpt.get();
+            int restored = categoryRepository.restoreById(deletedOne.getId(), description);
+            if (restored == 0) {
+                throw new IllegalStateException("카테고리 복구에 실패했습니다.");
+            }
+            Category restoredCat = categoryRepository.findById(deletedOne.getId())
+                    .orElseThrow(() -> new EntityNotFoundException("복구된 카테고리를 찾을 수 없습니다."));
+            return new CategoryCreateResDto(restoredCat.getId(), restoredCat.getName(), restoredCat.getDescription());
+        }
+
+        // 3) 새로 생성
         Category saved = categoryRepository.save(Category.builder()
                 .store(store)
-                .name(reqDto.getName())
-                .description(reqDto.getDescription())
+                .name(name)
+                .description(description)
                 .build());
 
         return new CategoryCreateResDto(saved.getId(), saved.getName(), saved.getDescription());
     }
 
+    @Transactional(readOnly = true)
     public List<GetCategoryResDto> getCategoriesByStore() {
-        final String storeId = storeJwtClaimUtil.getStoreId();
-        storeRepository.findById(UUID.fromString(storeId)).orElseThrow(() -> new EntityNotFoundException("유효하지 않은 storeId: " + storeId));
+        final UUID storeId = UUID.fromString(storeJwtClaimUtil.getStoreId());
 
-        List<Category> categoryList = categoryRepository.findAllByStoreId(UUID.fromString(storeId));
+        storeRepository.findById(storeId)
+                .orElseThrow(() -> new EntityNotFoundException("유효하지 않은 storeId: " + storeId));
 
-        if (categoryList.isEmpty()) {
-            throw new EntityNotFoundException("해당 storeId에 대한 카테고리가 존재하지 않습니다: " + storeId);
-        }
+        // 살아있는 카테고리만 조회
+        List<Category> categoryList = categoryRepository.findAllByStoreIdAndDeletedFalse(storeId);
 
         return categoryList.stream()
-                .map(category -> new GetCategoryResDto(category.getId(), category.getName(), category.getDescription()))
-                .collect(Collectors.toList());
+                .map(c -> new GetCategoryResDto(c.getId(), c.getName(), c.getDescription()))
+                .toList();
     }
 
     public CategoryModifyResDto modifyCategory(CategoryModifyReqDto reqDto) {
-        final String storeId = storeJwtClaimUtil.getStoreId();
-        storeRepository.findById(UUID.fromString(storeId)).orElseThrow(() -> new EntityNotFoundException("유효하지 않은 storeId: " + storeId));
+        final UUID storeId = UUID.fromString(storeJwtClaimUtil.getStoreId());
+        storeRepository.findById(storeId)
+                .orElseThrow(() -> new EntityNotFoundException("유효하지 않은 storeId: " + storeId));
 
-        Category category = categoryRepository.findByIdAndStoreId(reqDto.getCategoryId(), UUID.fromString(storeId))
+        // 살아있는 카테고리만 조회
+        Category category = categoryRepository.findByIdAndStoreIdAndDeletedFalse(
+                        reqDto.getCategoryId(), storeId)
                 .orElseThrow(() -> new EntityNotFoundException("해당 카테고리를 찾을 수 없습니다."));
 
-        if(category.getDescription().equals(reqDto.getNewDescription()) && category.getName().equals(reqDto.getNewName())) {
+        if (category.getDescription().equals(reqDto.getNewDescription())
+                && category.getName().equals(reqDto.getNewName())) {
             throw new IllegalArgumentException("카테고리 혹은 설명 중 수정된 사안이 있어야 합니다.");
         }
 
         if (!category.getName().equals(reqDto.getNewName())) {
-            if (categoryRepository.existsByStoreIdAndName(UUID.fromString(storeId), reqDto.getNewName())) {
+            // 살아있는 카테고리명 중복 방지
+            if (categoryRepository.existsByStoreIdAndNameAndDeletedFalse(storeId, reqDto.getNewName())) {
                 throw new DuplicateResourceException("이미 존재하는 카테고리명입니다: " + reqDto.getNewName());
             }
             category.setName(reqDto.getNewName());
@@ -100,22 +112,19 @@ public class CategoryService {
     }
 
     public void deleteCategory(String categoryName) {
-        final String storeId = storeJwtClaimUtil.getStoreId();
-        storeRepository.findById(UUID.fromString(storeId)).orElseThrow(() -> new EntityNotFoundException("유효하지 않은 storeId: " + storeId));
+        final UUID storeId = UUID.fromString(storeJwtClaimUtil.getStoreId());
 
-        validateNoMenusExist(categoryName);
-        int deleted = categoryRepository.deleteByStore_IdAndName(UUID.fromString(storeId), categoryName);
-        if (deleted == 0) {
-            throw new EntityNotFoundException("삭제 대상 카테고리를 찾을 수 없습니다.");
-        }
-    }
+        storeRepository.findById(storeId)
+                .orElseThrow(() -> new EntityNotFoundException("유효하지 않은 storeId: " + storeId));
 
-    private void validateNoMenusExist(String categoryName) {
-        final String storeId = storeJwtClaimUtil.getStoreId();
-        storeRepository.findById(UUID.fromString(storeId)).orElseThrow(() -> new EntityNotFoundException("유효하지 않은 storeId: " + storeId));
-
-        if (menuRepository.existsByCategory_StoreIdAndCategory_Name(UUID.fromString(storeId), categoryName)) {
+        // “삭제 안 된 메뉴” 남아있으면 금지
+        if (menuRepository.existsAliveMenuByStoreIdAndCategoryName(storeId, categoryName)) {
             throw new IllegalArgumentException("해당 카테고리에 소속된 메뉴가 존재하여 삭제할 수 없습니다.");
+        }
+
+        int updated = categoryRepository.softDeleteByStoreIdAndName(storeId, categoryName);
+        if (updated == 0) {
+            throw new EntityNotFoundException("삭제 대상 카테고리를 찾을 수 없습니다.");
         }
     }
 }
